# nasa_rul

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
cmapss/: __init__.py  data.py  features.py  models.py  viz.py
cmapss.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: 01_explore.ipynb
scripts/: train.py
